--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,5 @@ Session.vim
 !/src/test/run-make/thumb-none-qemu/example/.cargo
 no_llvm_build
 # Before adding new lines, see the comment at the top.
-*dYSM
+*.dSYM.zip
+*.dSYM
